Magick.NET.Native/MagickImage.h


MAGICK_NET_EXPORT Image *MagickImage_Create(const ImageInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Dispose(Image *);


MAGICK_NET_EXPORT PixelInfo *MagickImage_AlphaColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AlphaColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT size_t MagickImage_AnimationDelay_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AnimationDelay_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_AnimationIterations_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AnimationIterations_Set(Image *, const size_t);


MAGICK_NET_EXPORT PixelInfo *MagickImage_BackgroundColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_BackgroundColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT size_t MagickImage_BaseHeight_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_BaseWidth_Get(const Image *);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_BlackPointCompensation_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_BlackPointCompensation_Set(Image *, MagickBooleanType);


MAGICK_NET_EXPORT PixelInfo *MagickImage_BorderColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_BorderColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT RectangleInfo *MagickImage_BoundingBox_Get(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ChannelCount_Get(const Image *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaBluePrimary_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaBluePrimary_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaGreenPrimary_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaGreenPrimary_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaRedPrimary_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaRedPrimary_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT PrimaryInfo *MagickImage_ChromaWhitePoint_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ChromaWhitePoint_Set(Image *, const PrimaryInfo *);


MAGICK_NET_EXPORT size_t MagickImage_ClassType_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ClassType_Set(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT double MagickImage_ColorFuzz_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_ColorFuzz_Set(Image *, const double);


MAGICK_NET_EXPORT ssize_t MagickImage_ColormapSize_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ColormapSize_Set(Image *, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ColorSpace_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ColorSpace_Set(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ColorType_Get(const Image *, ExceptionInfo **);

MAGICK_NET_EXPORT void MagickImage_ColorType_Set(Image *, const size_t value, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_Compose_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Compose_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_CompressionMethod_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_CompressionMethod_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_Depth_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Depth_Set(Image *, const size_t);


MAGICK_NET_EXPORT const char *MagickImage_EncodingGeometry_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_Endian_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Endian_Set(Image *, const size_t);


MAGICK_NET_EXPORT const char *MagickImage_FileName_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_FileName_Set(Image *, const char *);


MAGICK_NET_EXPORT long MagickImage_FileSize_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_FilterType_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_FilterType_Set(Image *, const size_t);


MAGICK_NET_EXPORT const char *MagickImage_Format_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Format_Set(Image *, const char *);


MAGICK_NET_EXPORT double MagickImage_Gamma_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_GifDisposeMethod_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_GifDisposeMethod_Set(Image *, const size_t);


MAGICK_NET_EXPORT size_t MagickImage_Interpolate_Get(const Image *);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_HasAlpha_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_HasAlpha_Set(Image *, const MagickBooleanType);


MAGICK_NET_EXPORT size_t MagickImage_Height_Get(const Image *);


MAGICK_NET_EXPORT size_t MagickImage_Interlace_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_Interlace_Set(Image *, const size_t);